# dino

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/assets/: bird1.h  bird2.h  btn.h  cactus1.h  cactus2.h  cactus3.h  clouds.h  ground.h  motion1.h  motion2.h  motion3.h  motion4.h  motion5.h  motion6.h
include/dino/: bird.h  btn.h  cactus.h  clouds.h  common.h  dino.h  fps.h  ground.h  lv_anim.cpp  lv_anim.h  obstacle.cpp  obstacle.h  obstacle_manager.cpp  obstacle_manager.h  random.h  score.h  state.cpp  state.h  utils.h
resource/: conf.txt
simulator/: sdl_main.cpp
src/: monitor.h  packer.cpp  sdl_main.cpp
